chapter-7/yaml/blackbox.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: blackbox-exporter
  name: blackbox-exporter
  namespace: cattle-monitoring-system
spec:
  replicas: 1
  selector:
    matchLabels:
      name: blackbox-exporter
  strategy: {}
  template:
    metadata:
      labels:
        name: blackbox-exporter
    spec:
      containers:
        - image: kili-docker.pkg.coding.net/ebes/ot/prom/blackbox-exporter:v0.23.0
          name: blackbox-exporter
          ports:
            - containerPort: 9115
          volumeMounts:
            - name: config
              mountPath: /etc/blackbox_exporter
          args:
            - --config.file=/etc/blackbox_exporter/config.yml
            - --log.level=info
      volumes:
        - name: config
          configMap:
            name: blackbox-exporter
---
apiVersion: v1
kind: Service
metadata:
  #annotations:
  #  service.beta.kubernetes.io/alicloud-loadbalancer-address-type: intranet
  labels:
    name: blackbox-exporter
  name: blackbox-exporter
  namespace: cattle-monitoring-system
spec:
  #externalTrafficPolicy: Local
  selector:
    name: blackbox-exporter
  ports:
    - name: http-metrics
      port: 9115
      targetPort: 9115
  type: NodePort
