chapter-7/yaml/networkpolicyingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-nginx
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: jsh-web
  ingress:
    - from:
        - podSelector:
            matchLabels:
              access: "true"
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: "cattle-monitoring-system"
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: "kube-system"
